--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@optimizely/optimizely-sdk": "^4.9.1",
+    "@types/js-cookie": "^3.0.3",
     "@vercel/examples-ui": "^1.0.4",
     "cookie": "^0.5.0",
+    "js-cookie": "^3.0.1",
     "next": "^13.1.7-canary.21",
     "react": "latest",
     "react-dom": "latest"
