--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
+    "build:start": "pnpm build; pnpm start",
     "lint": "next lint"
   },
   "dependencies": {
     "@optimizely/optimizely-sdk": "^4.9.1",
-    "@types/js-cookie": "^3.0.3",
+    "@optimizely/react-sdk": "^2.9.2",
     "@vercel/examples-ui": "^1.0.4",
     "cookie": "^0.5.0",
     "js-cookie": "^3.0.1",
     "next": "^13.1.7-canary.21",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/akamai-edgeworkers": "^1.1.8",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "16.11.11",
     "@types/react": "latest",
+    "@types/uuid": "^9.0.1",
     "@vercel/edge-config": "^0.1.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.34.0",
