--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "build:start": "pnpm build; pnpm start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@optimizely/optimizely-sdk": "^4.9.1",
+    "@optimizely/optimizely-sdk": "^4.9.3",
     "@optimizely/react-sdk": "^2.9.2",
-    "@vercel/examples-ui": "^1.0.4",
+    "@vercel/examples-ui": "^1.0.5",
     "cookie": "^0.5.0",
-    "js-cookie": "^3.0.1",
-    "next": "^13.1.7-canary.21",
+    "js-cookie": "^3.0.5",
+    "next": "^13.4.4",
     "react": "latest",
     "react-dom": "latest",
     "uuid": "^9.0.0"
@@ -26,16 +27,16 @@
     "@types/node": "16.11.11",
     "@types/react": "latest",
     "@types/uuid": "^9.0.1",
-    "@vercel/edge-config": "^0.1.1",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.34.0",
+    "@vercel/edge-config": "^0.1.11",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
     "eslint-config-next": "canary",
-    "node-fetch": "2",
-    "postcss": "^8.4.4",
-    "prettier": "^2.8.4",
-    "tailwindcss": "^3.0.18",
+    "node-fetch": "^2.6.11",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "4.5.2",
-    "vercel": "^28.16.2"
+    "vercel": "^28.20.0"
   }
 }
